--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.16.2",
     "express": "^4.13.4",
     "karma-firefox-launcher": "^1.0.1",
+    "moment": "^2.19.1",
     "node-sass": "^4.5.3",
     "react": "^0.14.7",
     "react-addons-test-utils": "0.14.7",
