--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "node-uuid": "^1.4.8",
+    "redux": "^3.3.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
